# chat-project

./: .gitignore  CMakeLists.txt  README.md
GateServer/: AsioIOServicePool.cpp  CMakeLists.txt  CServer.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  RedisMgr.cpp  RedisMgr.h  message.pb.h
client/chat/: chat.pro  global.cpp  global.h  httpmgr.cpp  httpmgr.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.ui  rc.qrc  registerdialog.cpp  registerdialog.h  registerdialog.ui  singleton.h
client/chat/style/: stylesheet.qss
cmake/: Findmysql-concpp.cmake
server/GateServer/: AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlMgr.cpp  MysqlMgr.h  README.md  RedisMgr.h  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h  message.pb.cc  message.pb.h
server/VarifyServer/: .gitignore  config.json  server.js
